@@ -236,3 +236,15 @@ NOTE: These entries may not contain every single minor change but should contain
 
 	header file changes
 		* include/vgcp.h: added new variables (msgToWhite, msgWhite), updated and added new prototypes
+
+
+2021-03-28	version 00-0014
+	Fixed socket related bugs, fixed connection not working without _SOCKET_DEBUG and removed unnecessary "to" variable in the "msg" structure.
+
+	source file changes
+		* src/connection.c: added delay when it would block, no longer uses "to" variable in the "msg" structure
+		* src/main.c: no longer uses "to" variable in the "msg" structure, 
+			now creates threads after parsing through the command line arguments
+
+	header file changes
+		* include/vgcp.h: removed "to" variable from the "msg" structure
